fix white space to the right

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -10,3 +10,12 @@ body {
   line-height: 1.5;
   font-family: "Karla", sans-serif;
 }
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
